# rust_project

./: Cargo.toml  rgit.bat  status.rs
Commit/: main.rs
Mysha1/: hash.rs
add/: main.rs
init/: rgit.bat  rgit_contents_initializer.rs
sha-1/: main.rs
