[package]
name = "git"
version = "0.1.0"
edition = "2021"
crossterm = "0.20.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
winapi = { version = "0.3", features = ["winbase"] }
sha-1 = "0.10"
[[bin]]
name = "sha1"
path = "sha-1/main.rs"
[[bin]]
name = "init"
path = "init/rgit_contents_initializer.rs"



