[package]


name = "Mysha1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
chrono = "0.4"
clap = "4.5.4"
sha1 = "0.10"  # Ensure you have the sha1 crate
winapi = { version = "0.3", features = ["winbase"] }
flate2 = "1.0.25"
hex = "0.4.3"


[[bin]]
name = "init"
path = "init/rgit_contents_initializer.rs"
[[bin]]
name = "add"
path = "add/main.rs"
[[bin]]
name = "commit"
path = "Commit/main.rs"
[[bin]]
name = "status"
path = "status.rs"


                  
  


